Fixed: first row menu on small devices was not visible

--- a/src/app/table/table-data/row/row.component.scss
+++ b/src/app/table/table-data/row/row.component.scss
@@ -95,7 +95,7 @@
       top: -15px;
 
       @media (max-width: 1100px) {
-        top: -55px;
+        top: -45px;
         background-color: white;
       }
     }
@@ -104,7 +104,7 @@
       top: 15px;
 
       @media (max-width: 1100px) {
-        top: -30px;
+        top: -20px;
         background-color: white;
       }
     }
