--- a/src/app/table/table-data/table-data.component.scss
+++ b/src/app/table/table-data/table-data.component.scss
@@ -41,7 +41,7 @@ thead th {
   height: 40px;
   position: sticky;
   top: 0;
-  z-index: 9999;
+  z-index: 99;
   background-color: white
 }
 
